--- a/resume_proj/resume_app/templates/index.html
+++ b/resume_proj/resume_app/templates/index.html
@@ -58,7 +58,7 @@
 
     <div id="pics" class="row small-up-2 large-up-4">
       <div class="column">
-        <img class="img-fluid" src="{% static 'img/Background_picture_template_v2.jpg' %}">
+        <img class="img-fluid" src="{% static 'img/Resume_template1_v3.jpg' %}">
         <h5>Profile picture in the background</h5>
         <p><a href="/logreg" class="button expanded">Create Account</a></p>
       </div>
