--- a/resume_proj/resume_app/templates/template1.html
+++ b/resume_proj/resume_app/templates/template1.html
@@ -12,7 +12,7 @@
     <title>Resume Display</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/template1.css' %}">
-    <!-- <script>
+    <script>
         $(document).ready(function () {
             $('.experience, .row, .employment, .additional').hide();
 
@@ -32,7 +32,7 @@
         })
 
 
-    </script> -->
+    </script>
 </head>
 
 <body style="background-image: url('{{ user.picture.img.url }}');" id="bg">
