--- a/resume_proj/resume_app/templates/preview.html
+++ b/resume_proj/resume_app/templates/preview.html
@@ -63,7 +63,7 @@
         <img class="img-fluid" src="{{ user.picture.img.url }}" alt="User image thumbnail"> 
     </div>
     <div id="delete_btn">
-        <a href="/delete_pic/{{user.id}}" class="btn btn-primary">Delete pic</a>
+        <a href="/delete_profilepic/{{user.id}}" class="btn btn-primary">Delete pic</a>
     </div>
     {% else %}
     <br>
