--- a/resume_proj/resume_app/templates/about.html
+++ b/resume_proj/resume_app/templates/about.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto"></ul>
             <span class="navbar-text">
-                <a href="/">Home</a>
+                <a href="/logreg">Register</a>
                 <a href="/contact">Contact</a>
                 <a href="/media">Media</a>
                 <a href="/recommend">Recommendations</a>
