--- a/resume_proj/resume_app/templates/recommend.html
+++ b/resume_proj/resume_app/templates/recommend.html
@@ -35,7 +35,7 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto"></ul>
                 <span class="navbar-text">
-                    <a href="/">Home</a>
+                    <a href="/logreg">Register</a>
                     <a href="/about">About</a>
                     <a href="/contact">Contact</a>
                     <a href="/media">Media</a>
