--- a/resume_proj/resume_app/templates/employment.html
+++ b/resume_proj/resume_app/templates/employment.html
@@ -41,7 +41,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Welcome {{user.first_name}} {{user.last_name}}!</a>
+            <h5>Welcome, {{user.first_name}} {{user.last_name}}!</h5>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
     </nav><!-- /NAVBAR -->
     <br>
     <h2>Employment <span class="emp_notes">(start with most current)</span></h2>
-    <p>Maximum of 3 entries</p>
+    <p>3 entries required</p>
     {% for message in messages %}
     <ul>
         <li>{{ message }}</li>
