--- a/resume_proj/resume_app/templates/postregister.html
+++ b/resume_proj/resume_app/templates/postregister.html
@@ -28,7 +28,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Welcome {{user.first_name}} {{user.last_name}}!</a>
+            <h5>Welcome, {{user.first_name}} {{user.last_name}}!</h5>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
